ingress-single.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ex
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: traefik
  rules:
  - host:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-app-service
            port:
              number: 8081
